--- a/FoodCollector/Base.lproj/PublicationDetsilsPublisherActionsHeaderView.xib
+++ b/FoodCollector/Base.lproj/PublicationDetsilsPublisherActionsHeaderView.xib
@@ -1,110 +1,75 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicationDetsilsPublisherActionsHeaderView" customModule="FoodCollector" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAK-ST-0jT">
-                    <rect key="frame" x="362" y="15" width="50" height="50"/>
-                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAK-ST-0jT">
+                    <rect key="frame" x="358" y="1" width="52" height="52"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="50" id="4rf-BI-qQL"/>
-                        <constraint firstAttribute="height" constant="50" id="9T8-3c-mNg"/>
+                        <constraint firstAttribute="width" constant="52" id="4rf-BI-qQL"/>
+                        <constraint firstAttribute="height" constant="52" id="9T8-3c-mNg"/>
                     </constraints>
-                    <state key="normal" image="sms">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
+                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <state key="normal" backgroundImage="SMS_New"/>
                     <connections>
                         <action selector="buttonsActions:" destination="iN0-l3-epB" eventType="touchUpInside" id="HVd-Eg-IR8"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sxk-05-spA">
-                    <rect key="frame" x="535" y="15" width="50" height="50"/>
-                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sxk-05-spA">
+                    <rect key="frame" x="533" y="1" width="52" height="52"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="Qmh-Qu-fsk"/>
-                        <constraint firstAttribute="width" constant="50" id="zt4-dS-VSq"/>
+                        <constraint firstAttribute="height" constant="52" id="Qmh-Qu-fsk"/>
+                        <constraint firstAttribute="width" constant="52" id="zt4-dS-VSq"/>
                     </constraints>
-                    <state key="normal" image="call">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
+                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <state key="normal" backgroundImage="Call_New"/>
                     <connections>
                         <action selector="buttonsActions:" destination="iN0-l3-epB" eventType="touchUpInside" id="tIU-Bp-AKH"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gxi-yq-Ucm">
-                    <rect key="frame" x="0.0" y="79" width="600" height="1"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goW-fJ-MoN">
+                    <rect key="frame" x="182" y="1" width="52" height="52"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="1" id="etz-84-aZW"/>
+                        <constraint firstAttribute="width" constant="52" id="sXv-sE-86W"/>
+                        <constraint firstAttribute="height" constant="52" id="xYP-j8-Ovq"/>
                     </constraints>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goW-fJ-MoN">
-                    <rect key="frame" x="188" y="15" width="50" height="50"/>
-                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="50" id="sXv-sE-86W"/>
-                        <constraint firstAttribute="height" constant="50" id="xYP-j8-Ovq"/>
-                    </constraints>
-                    <state key="normal" image="Twitter">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
+                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <state key="normal" backgroundImage="TwitterButton"/>
                     <connections>
                         <action selector="buttonsActions:" destination="iN0-l3-epB" eventType="touchUpInside" id="6yQ-mQ-6oh"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RF8-iD-c8n">
-                    <rect key="frame" x="15" y="15" width="50" height="50"/>
-                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RF8-iD-c8n">
+                    <rect key="frame" x="15" y="1" width="52" height="52"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="50" id="Dnu-me-cu9"/>
-                        <constraint firstAttribute="height" constant="50" id="aIg-Ww-rlb"/>
+                        <constraint firstAttribute="width" constant="52" id="Dnu-me-cu9"/>
+                        <constraint firstAttribute="height" constant="52" id="aIg-Ww-rlb"/>
                     </constraints>
-                    <state key="normal" image="Facebook">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
+                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <state key="normal" backgroundImage="FacebookButton"/>
                     <connections>
                         <action selector="buttonsActions:" destination="iN0-l3-epB" eventType="touchUpInside" id="reA-YB-Lu2"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="RF8-iD-c8n" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="0tT-UH-bgU"/>
+                <constraint firstItem="sxk-05-spA" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="0Am-Vx-wKv"/>
                 <constraint firstAttribute="trailing" secondItem="sxk-05-spA" secondAttribute="trailing" constant="15" id="3KH-ai-hgT"/>
-                <constraint firstItem="goW-fJ-MoN" firstAttribute="leading" secondItem="RF8-iD-c8n" secondAttribute="trailing" priority="750" constant="121" id="6gj-M7-GXX"/>
-                <constraint firstItem="sxk-05-spA" firstAttribute="leading" secondItem="mAK-ST-0jT" secondAttribute="trailing" priority="750" constant="117" id="9Bl-aJ-Jy0"/>
-                <constraint firstItem="mAK-ST-0jT" firstAttribute="leading" secondItem="goW-fJ-MoN" secondAttribute="trailing" priority="750" constant="126" id="FSO-4j-o8w"/>
-                <constraint firstAttribute="trailing" secondItem="gxi-yq-Ucm" secondAttribute="trailing" constant="533" id="HqD-Dl-2Us"/>
                 <constraint firstItem="RF8-iD-c8n" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="JrC-AR-4YV"/>
-                <constraint firstItem="mAK-ST-0jT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="goW-fJ-MoN" secondAttribute="trailing" constant="20" id="Mq2-vg-rwY"/>
-                <constraint firstItem="RF8-iD-c8n" firstAttribute="top" secondItem="gxi-yq-Ucm" secondAttribute="bottom" constant="42" id="Nn7-7I-xv7"/>
-                <constraint firstItem="gxi-yq-Ucm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="OTk-ch-FFU"/>
-                <constraint firstItem="sxk-05-spA" firstAttribute="leading" secondItem="mAK-ST-0jT" secondAttribute="trailing" priority="750" constant="105" id="QmC-iN-wJD"/>
-                <constraint firstItem="RF8-iD-c8n" firstAttribute="top" secondItem="gxi-yq-Ucm" secondAttribute="bottom" constant="42" id="RUD-Sd-eJ0"/>
-                <constraint firstAttribute="trailing" secondItem="sxk-05-spA" secondAttribute="trailing" constant="15" id="Sy5-fe-fja"/>
+                <constraint firstItem="mAK-ST-0jT" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="VYn-ZE-O5D"/>
                 <constraint firstItem="mAK-ST-0jT" firstAttribute="leading" relation="lessThanOrEqual" secondItem="goW-fJ-MoN" secondAttribute="trailing" constant="124" id="Z2N-ww-ydp"/>
-                <constraint firstItem="mAK-ST-0jT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="cK4-sO-NZA"/>
+                <constraint firstItem="goW-fJ-MoN" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="cNa-mE-M5U"/>
                 <constraint firstItem="sxk-05-spA" firstAttribute="leading" secondItem="mAK-ST-0jT" secondAttribute="trailing" constant="123" id="cOA-E3-bCG"/>
-                <constraint firstAttribute="trailing" secondItem="gxi-yq-Ucm" secondAttribute="trailing" id="cpW-yD-ULE"/>
-                <constraint firstItem="mAK-ST-0jT" firstAttribute="leading" secondItem="goW-fJ-MoN" secondAttribute="trailing" constant="132" id="ept-uA-oUe"/>
-                <constraint firstItem="mAK-ST-0jT" firstAttribute="leading" secondItem="goW-fJ-MoN" secondAttribute="trailing" constant="142" id="et3-PV-vA4"/>
                 <constraint firstItem="sxk-05-spA" firstAttribute="leading" relation="lessThanOrEqual" secondItem="mAK-ST-0jT" secondAttribute="trailing" constant="123" id="hji-Ap-WSO"/>
-                <constraint firstItem="gxi-yq-Ucm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-98" id="iYN-tZ-H7d"/>
-                <constraint firstItem="RF8-iD-c8n" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="ixi-s3-eS6"/>
-                <constraint firstItem="RF8-iD-c8n" firstAttribute="top" secondItem="gxi-yq-Ucm" secondAttribute="bottom" constant="42" id="jKM-1O-3pJ"/>
-                <constraint firstItem="goW-fJ-MoN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="lhn-2C-xPc"/>
-                <constraint firstItem="sxk-05-spA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="r6G-Oq-oHt"/>
-                <constraint firstItem="gxi-yq-Ucm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="-23" id="t5H-49-sIx"/>
-                <constraint firstItem="RF8-iD-c8n" firstAttribute="top" secondItem="gxi-yq-Ucm" secondAttribute="bottom" constant="42" id="tRo-72-Chr"/>
-                <constraint firstAttribute="bottom" secondItem="gxi-yq-Ucm" secondAttribute="bottom" id="uCd-jq-KP1"/>
+                <constraint firstItem="RF8-iD-c8n" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="kMc-z3-o1S"/>
                 <constraint firstItem="mAK-ST-0jT" firstAttribute="leading" secondItem="goW-fJ-MoN" secondAttribute="trailing" constant="124" id="x0M-Xi-eOU"/>
                 <constraint firstItem="goW-fJ-MoN" firstAttribute="leading" relation="lessThanOrEqual" secondItem="RF8-iD-c8n" secondAttribute="trailing" constant="123" id="zTc-hc-F3I"/>
             </constraints>
@@ -112,26 +77,6 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="Nn7-7I-xv7"/>
-                    <exclude reference="RUD-Sd-eJ0"/>
-                    <exclude reference="ixi-s3-eS6"/>
-                    <exclude reference="jKM-1O-3pJ"/>
-                    <exclude reference="tRo-72-Chr"/>
-                    <exclude reference="HqD-Dl-2Us"/>
-                    <exclude reference="iYN-tZ-H7d"/>
-                    <exclude reference="t5H-49-sIx"/>
-                    <exclude reference="6gj-M7-GXX"/>
-                    <exclude reference="FSO-4j-o8w"/>
-                    <exclude reference="Mq2-vg-rwY"/>
-                    <exclude reference="ept-uA-oUe"/>
-                    <exclude reference="et3-PV-vA4"/>
-                    <exclude reference="9Bl-aJ-Jy0"/>
-                    <exclude reference="QmC-iN-wJD"/>
-                    <exclude reference="Sy5-fe-fja"/>
-                </mask>
-            </variation>
             <connections>
                 <outlet property="button1to2widthConstraint" destination="zTc-hc-F3I" id="uUg-Dx-Dob"/>
                 <outlet property="button2to3widthConstraint" destination="x0M-Xi-eOU" id="643-Yg-sDt"/>
@@ -144,9 +89,9 @@
         </view>
     </objects>
     <resources>
-        <image name="Facebook" width="26" height="26"/>
-        <image name="Twitter" width="26" height="26"/>
-        <image name="call" width="26" height="26"/>
-        <image name="sms" width="30" height="30"/>
+        <image name="Call_New" width="52" height="52"/>
+        <image name="FacebookButton" width="52" height="52"/>
+        <image name="SMS_New" width="52" height="52"/>
+        <image name="TwitterButton" width="52" height="52"/>
     </resources>
 </document>
