--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="akw-hV-T1a">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="akw-hV-T1a">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -1433,7 +1433,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lyf-6b-Qx7">
-                                                    <rect key="frame" x="249" y="12" width="20" height="20"/>
+                                                    <rect key="frame" x="226" y="12" width="20" height="20"/>
                                                     <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="TZh-mQ-Fho"/>
@@ -1452,7 +1452,7 @@
                                                 <constraint firstItem="rrd-P6-ha5" firstAttribute="centerY" secondItem="9TJ-aj-r0D" secondAttribute="centerY" id="IsG-YJ-e2G"/>
                                                 <constraint firstItem="Lyf-6b-Qx7" firstAttribute="centerY" secondItem="9TJ-aj-r0D" secondAttribute="centerY" id="cKY-mb-l2G"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="rrd-P6-ha5" secondAttribute="trailing" id="grB-ma-L5s"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Lyf-6b-Qx7" secondAttribute="trailing" constant="43" id="lb4-bT-idy"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Lyf-6b-Qx7" secondAttribute="trailing" constant="66" id="lb4-bT-idy"/>
                                                 <constraint firstItem="rrd-P6-ha5" firstAttribute="leading" secondItem="Ez8-Rp-6q6" secondAttribute="trailing" constant="19" id="xjt-7q-sof"/>
                                             </constraints>
                                             <variation key="default">
