--- a/FoodCollector/Base.lproj/ActivityLog.storyboard
+++ b/FoodCollector/Base.lproj/ActivityLog.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TFK-jX-t5V">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TFK-jX-t5V">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -101,13 +101,16 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="1qu-Id-ilS">
-                        <barButtonItem key="leftBarButtonItem" title="Done" id="WzQ-3g-mH1">
+                        <barButtonItem key="leftBarButtonItem" title="Back" style="done" id="WzQ-3g-mH1">
                             <connections>
                                 <action selector="dismiss:" destination="TFK-jX-t5V" id="jmN-aW-Vp4"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="backButton" destination="WzQ-3g-mH1" id="5s8-2m-2Ei"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dgc-ne-qjo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
