added publications for user

--- a/FoodCollector/Base.lproj/ActivityLog.storyboard
+++ b/FoodCollector/Base.lproj/ActivityLog.storyboard
@@ -17,7 +17,7 @@
                         <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="24" minY="0.0" maxX="17" maxY="0.0"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="activityLogCell" rowHeight="80" id="tmS-7L-yJc" customClass="ActivityLogTVCell" customModule="FoodCollector" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="activityLogCell" rowHeight="80" id="tmS-7L-yJc" customClass="ActivityLogTVCell" customModule="FoodCollector" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tmS-7L-yJc" id="gJh-DK-zX9">
