--- a/FoodCollector/PublicationDetailsPriceTVCell.xib
+++ b/FoodCollector/PublicationDetailsPriceTVCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,19 +15,36 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sm1-S8-RcG">
-                        <rect key="frame" x="8" y="11" width="68" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Price: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sm1-S8-RcG">
+                        <rect key="frame" x="12" y="11" width="48" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="68" id="CZC-Ce-mTy"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="CZC-Ce-mTy"/>
+                            </mask>
+                        </variation>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="12.34" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbT-1I-qUT">
-                        <rect key="frame" x="86" y="11" width="124" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12.34" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbT-1I-qUT">
+                        <rect key="frame" x="70" y="11" width="124" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="124" id="ORI-wP-G64"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
                         <color key="textColor" red="0.2274509804" green="0.59999999999999998" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="sm1-S8-RcG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="iJ5-Zc-mEr"/>
+                    <constraint firstItem="NbT-1I-qUT" firstAttribute="leading" secondItem="sm1-S8-RcG" secondAttribute="trailing" constant="10" id="mzV-Aw-NhP"/>
+                    <constraint firstItem="sm1-S8-RcG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="4" id="v15-8l-FF1"/>
+                    <constraint firstItem="NbT-1I-qUT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xZ2-YP-L3z"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="priceLabel" destination="NbT-1I-qUT" id="5jg-70-5XN"/>
